ggplot2 0.8.2  (2008-XX-XX)
----------------------------------------

* scale_manual: labels now correctly sets legend labels.
* ggsave: path parameter correctly sets path
* stat_density_2d: no longer passes unnecessary parameters to kde2d causing an error message (seen when setting aesthetics with qplot)
* stat_sum now correctly preserves other aesthetic columns (should be a bit faster too)
* scale_size and scale_area: increase default size range
* guides: fix broken legend from default stat aesthetics (e.g. for stat_sum)
* ggfluctuation: default to aspect ratio that produces squares
* scale_datetime: improved breaks calculation
* geom_errorbar now works correctly with dashed lines
* geom_path will now silently ignore lines with less than 2 points (instead of throwing a mysterious error as before)